added 'description' to bookings table and added new routes of bookings

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -12,11 +12,11 @@
     <% end %>
 
     <div class="form-inputs">
-      <%= f.input :start_date %>
+      <%= f.input :start_time %>
     </div>
     <br>
     <div class="form-inputs">
-      <%= f.input :end_date %>
+      <%= f.input :end_time %>
     </div>
     <br>
     <div class="form-inputs">
