--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -17,15 +17,15 @@
             <% @bookings.each do |booking| %>
               <tr>
                 <td><%= booking.therapist.full_name %></td>
-                <td><%= booking.start_date %></td>
-                <td><%= booking.end_date %></td>
+                <td><%= booking.start_time %></td>
+                <td><%= booking.end_time %></td>
                 <% if booking.status  %>
                   <td>Confirmed <img src="https://image.flaticon.com/icons/svg/240/240103.svg" width="20"></img></td>
                 <% else %>
                   <td>Pending Confirmation <img src="https://image.flaticon.com/icons/svg/240/240260.svg" width="20"></img></td>
                 <% end %>
-                <td><%= (booking.start_date - Date.today).to_i  %></td>
-                <td><%= (booking.end_date - booking.start_date).to_i  %></td>
+                <td><%= (booking.start_time - Date.today).to_i  %></td>
+                <td><%= (booking.end_time - booking.start_time).to_i  %></td>
                 <td><%= link_to "View booking", booking_path(booking) %></td>
                 <% if current_user.therapist %>
                   <td>
