--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -20,7 +20,7 @@
     </div>
     <br>
     <div class="form-inputs">
-      <%= f.input :status %>
+      <%= f.input :description %>
     </div>
 
     <div class="form-actions">
