corrected code in wrong 'application' file

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= simple_form_for [therapist, booking] do |f| %>
+  <%= simple_form_for([therapist, booking ], remote: true) do |f| %>
     <% if @booking.errors.any? %>
       <div class="errors-container">
         <%= f.error_notification %>
