--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,1 +1,12 @@
+<h1 class = "title"> New review</h1>
+
+<div class = "section">
+  <%= simple_form_for @review do |f| %>
+  <div class = "field">
+    <div class = "control">
+      <%= f.input :title, input_html: { class: "input"}, wrapper: false, label_html: { class: "label"} %>
+        </div>
+      </div>
+      <% end %>
+    </div>
 
