--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,18 +9,49 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
-
+    <%= f.input :current_password,
+                hint: "Enter your current password to confirm your changes",
+                required: true,
+                input_html: { autocomplete: "current-password" } %>
+    <h1>Details</h1>
+    <% if :therapist %>
+      <%= f.input :photo %>
+      <%= f.input :photo_cache,
+                  as: :hidden,
+                  required: true %>
+    <% else %>
+      <%= f.input :photo %>
+      <%= f.input :photo_cache,
+                  as: :hidden,
+                  required: false %>
+    <% end %>
+    <%= f.input :first_name,
+                required: true %>
+    <%= f.input :last_name,
+                required: true %>
+    <%= f.input :address,
+                required: false %>
+    <%= f.input :phone_number,
+                required: false %>
+    <% if :therapist %>
+      <%= f.input :languages,
+                  required: true %>
+    <% else %>
+      <%= f.input :languages,
+                  required: false %>
+    <% end %>
+    <% if :therapist %>
+      <%= f.input :expertise,
+                  required: true %>
+    <% end %>
+    <h1>Change your password</h1>
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
+                hint: "Leave it blank if you don't want to change your password",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
   </div>
 
   <div class="form-actions">
