fixed table for bookings

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,8 +6,10 @@
             <thead>
               <th>Therapist</th>
               <th>Starting Date</th>
+              <th>End time</th>
               <th>Status</th>
               <th>Days to start</th>
+              <th>Duration</th>
               <th>View</th>
               <% if current_user.therapist %>
                 <th>Confirm</th>
