--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1>Book: <%= @therapist.full_name %></h1>
 
-  <%= render 'bookings/form', therapist: @therapist, booking: @booking %>
+  <%= render 'shared/form', therapist: @therapist, booking: @booking %>
 </div>
