--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= simple_form_for([therapist, booking ], remote: true) do |f| %>
+  <%= simple_form_for([therapist, booking ]) do |f| %>
     <% if @booking.errors.any? %>
       <div class="errors-container">
         <%= f.error_notification %>
@@ -27,4 +27,5 @@
       <%= f.button :submit %>
     </div>
   <% end %>
+
 </div>
