search ajax implemented

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,22 @@
 <!-- Search -->
-<%= form_tag users_path, method: :get do %>
-<%= text_field_tag :query,
-  params[:query],
-  class: "form-control",
-  placeholder: "Find a therapist or expert" %>
+<%= form_tag users_path, method: :get, remote: true do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Find a therapist or expert" %>
+  <%= submit_tag "search" %>
 <% end %>
 <!-- End Search -->
 
-<% @therapists.each do |therapist| %>
-  <p><%= therapist.first_name %></p>
-  <h2><%= therapist.last_name %></h2>
-  <p><%= therapist.address %></p>
-  <%= link_to "View", user_path(therapist) %>
-  <br>
-<% end %>
+<div class="cards-container">
+  <% @therapists.each do |therapist| %>
+    <p><%= therapist.first_name %></p>
+    <h2><%= therapist.last_name %></h2>
+    <p><%= therapist.address %></p>
+    <%= link_to "View", user_path(therapist) %>
+    <br>
+  <% end %>
+</div>
 
 
 <%= link_to "Home", root_path, class: "btn btn-primary" %>
