added back button on bookingshow to bookings index page

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -13,4 +13,7 @@
 
 
 <%= link_to "Edit your booking", edit_booking_path(@booking) %>
+<br>
 <%= link_to "Review your Therapist", new_user_review_path(@booking) %>
+<br>
+<%= link_to "View bookings", bookings_path(@booking) %>
