--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,26 +1,28 @@
 <div class="row bookings-table">
-    <div class="col-sm-12 col-md-6">
-      <h3>Bookings</h3>
-        <table class="table table-bordered">
-          <thead>
-            <th>Therapist</th>
-            <th>Starting Date</th>
-            <th>End time</th>
-            <th>Status</th>
-            <th>Days to start</th>
-            <th>Duration</th>
-            <th>View</th>
-            <% if current_user.therapist %>
-              <th>Confirm</th>
-            <% end %>
-            <th>Delete</th>
-          </thead>
-          <tbody class="table-body">
-            <% @bookings.each do |booking| %>
-              <%= render 'table', booking: booking %>
-              <!-- Render partial of table of the booking -->
-            <% end %>
-          </tbody>
-        </table>
-    </div>
+  <div class="col-sm-12 col-md-6">
+    <h3>Bookings</h3>
+      <table class="table table-bordered">
+        <thead>
+          <th>Therapist</th>
+          <th>Starting Date</th>
+          <th>End time</th>
+          <th>Status</th>
+          <th>Days to start</th>
+          <th>Duration</th>
+          <th>View</th>
+          <% if current_user.therapist %>
+            <th>Confirm</th>
+          <% end %>
+          <th>Delete</th>
+        </thead>
+        <tbody class="table-body">
+          <% @bookings.each do |booking| %>
+            <%= render 'table', booking: booking %>
+            <!-- Render partial of table of the booking -->
+          <% end %>
+        </tbody>
+      </table>
+  </div>
 </div>
+
+<%= link_to "Browse Therapist", users_path, class: "btn btn-primary" %>
