search ajax re-implemented

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,8 @@
   <%= text_field_tag :query,
     params[:query],
     class: "form-control",
-    placeholder: "Find a therapist or expert" %>
-  <%= submit_tag "search" %>
+    placeholder: "Browse a therapist or field of expertise"
+    %>
 <% end %>
 <!-- End Search -->
 
