--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,8 +1,8 @@
 <% if @message.errors.any? %>
 <% else %>
-  const messagesContainer = document.querySelector('.messages');
+  messagesContainer = document.querySelector('.messages');
   messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message, user_is_messages_author: true %>');
-  const input = document.querySelector('#message_content');
+  input = document.querySelector('#message_content');
   input.value = '';
   input.blur();
       scrollLastMessageIntoView();
