started new scss for user login page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
     <p><%= therapist.first_name %></p>
     <h2><%= therapist.last_name %></h2>
     <p><%= therapist.address %></p>
-    <%= link_to "View", user_path(therapist), class: "btn btn-primary %>
+    <%= link_to "View", user_path(therapist), class: "btn btn-primary" %>
     <br>
   <% end %>
   <br>
