--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
-      <div class="chat-header"><h4>#<%= @chat_room.name %></h4></div>
+      <div class="chat-header"><h4>#TESTING</h4></div>
       <div class="messages">
-        <% @chat_room.messages.each do |message| %>
+        <% @chatrooms.messages.each do |message| %>
           <%= render "messages/message", message: message, user_is_messages_author: message.user == current_user %>
         <% end %>
       </div>
       <div id="create-message">
-        <%= simple_form_for [ @chat_room, Message.new ], remote: true do |f| %>
+        <%= simple_form_for [ @chatrooms, Message.new ], remote: true do |f| %>
           <%= f.input :content, label: false %>
         <% end %>
       </div>
@@ -20,8 +20,8 @@
 <% content_for :after_js do %>
   <script>
     scrollLastMessageIntoView();
-    App['chat_room_<%= @chat_room.id %>'] = App.cable.subscriptions.create(
-      { channel: 'ChatRoomsChannel', chat_room_id: <%= @chat_room.id %> }, {
+    App['chat_room_<%= @chatrooms.id %>'] = App.cable.subscriptions.create(
+      { channel: 'ChatRoomsChannel', chatrooms_id: <%= @chatrooms.id %> }, {
         received: (data) => {
               if (data.current_user_id !== <%= current_user.id %>) {
               const messagesContainer = document.querySelector('.messages');
