--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -4,8 +4,20 @@
   margin-top: 50px;
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+  h2 {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .btn {
+    width: 100%;
+    background-color: #489099;
+    text-decoration: none;
+    margin-bottom: 20px;
+  }
 }
 
-h2 {
-  margin-bottom: 20px;
+.login-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
