--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="headers-text">
+    <h1>THERAPY <font style="font-weight:bold; color:#6ECAD6">SESSIONS</font> MADE EASY</h1>
+    <h2>Find a specialist, start your therapy and change your life - wherever you are</h2>
+  </div>
+</div>
