--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -4,6 +4,7 @@
   margin-top: 50px;
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+  width: 370px;
   h2 {
     margin-bottom: 20px;
     text-align: center;
@@ -13,6 +14,8 @@
     background-color: #489099;
     text-decoration: none;
     margin-bottom: 20px;
+    border: none;
+    padding: 8px;
   }
 }
 
@@ -20,4 +23,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
