--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="login-container">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+
       <div class="form-login">
         <h2>Sign up</h2>
 
@@ -22,13 +22,13 @@
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+            <%= f.button :submit, "Register", class: "btn btn-primary" %>
           </div>
         <% end %>
 
         <%= render "devise/shared/links" %>
       </div>
-    </div>
+
   </div>
 </div>
 
