--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -5,10 +5,13 @@
     <div>Random User ID:
       <span id="current-user"><%= @random_number %></span>
     </div>
-
-    <div id="remote-video-container"></div>
-    <video id="local-video" autoplay></video>
-
+        <div id="remote-video-container">
+        <div id="video_overlays">
+          <video id="local-video" autoplay muted></video>
+        </div>
+          <video id="remote-video" autoplay></video>
+      </div>
+    </div>
     <hr />
 
     <button onclick="handleJoinSession()">
@@ -43,17 +46,20 @@
     <% content_for :after_js do %>
       <script>
         scrollLastMessageIntoView();
-        App['chat_room_<%= @chatrooms.id %>'] = App.cable.subscriptions.create(
+        App['chatrooms_<%= @chatrooms.id %>'] = App.cable.subscriptions.create(
           { channel: 'ChatRoomsChannel', chatrooms_id: <%= @chatrooms.id %> }, {
             received: (data) => {
+              console.log(data);
                   if (data.current_user_id !== <%= current_user.id %>) {
                   const messagesContainer = document.querySelector('.messages');
+                  console.log(messagesContainer);
                   messagesContainer.insertAdjacentHTML('beforeend', data.message_partial);
                 scrollLastMessageIntoView();
               }
             }
           }
         )
+
       </script>
     <% end %>
 
