--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
 // @import url('https://fonts.googleapis.com/css?family=Teko:400,700');
-@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700');
 
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
+$body-font: 'Source Sans Pro', sans-serif;
 $headers-font: 'Archivo Narrow', sans-serif;;
 
 // To use a font file (.woff) uncomment following lines
