--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,13 +3,17 @@
   background-size: cover;
   height: calc(100vh - 66px);
   background-position: center;
+  display: flex;
+  align-items: center;
 }
 
 .headers-text {
-  // text-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  margin-left: 250px;
+  margin-top: 250px;
   font-weight: 700;
-  padding-top: 50vh;
-  padding-left: 10vw;
   color: #FFFFFF;
   h2 {
     font-weight: 300;
@@ -18,5 +22,20 @@
   h1 {
     font-size: $font-size-h1;
   }
+  .primary-button {
+    font-family: $body-font;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    background-color: #6ECAD6;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
 }
+
 
