--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,12 @@
   <div class="headers-text">
     <h1>THERAPY <font style="font-weight:bold; color:#6ECAD6">SESSIONS</font> MADE EASY</h1>
     <h2>Find a specialist, start your therapy and change your life - wherever you are</h2>
+    <div class="main-button">
+      <% if !user_signed_in? %>
+        <%= link_to new_user_registration_path do %>
+          <button type="submit" class="primary-button">Start Your Journey</button>
+        <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
