--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,35 @@
 .avatar {
-  width: 40px;
+  width: 200px;
   border-radius: 50%;
-}
-.avatar-large {
-  width: 56px;
+  padding-top: 10px;
+}.avatar-small {
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
+  padding-top: 10px;
 }
-.avatar-bordered {
-  width: 40px;
+.avatar img {
+  height: 50px;
+}
+.avatar-box {
+  padding-left: 20px;
+}
+.avatar-bruce {
+  width: 80px;
   border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  padding-top: 10px;
 }
-.avatar-square {
-  width: 40px;
-  border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+.avatar-card {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  padding-top: 10px;
+}
+.showbox {
+  display: flex;
+  margin: 10px;
+  padding: 10px;
+}
+.profile-box {
+  display: flex;
 }
