--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit %>
+      <%= f.button :submit, class: "btn btn-primary" %>
     </div>
   <% end %>
 
