--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-  <%= simple_form_for [@user,  @review] do |f| %>
+  <%= simple_form_for [@user, @review] do |f| %>
     <div class="form-inputs">
       <%= f.input :description , as: :text , :input_html => {:minlength => 150 , maxlength: 300} %>
     </div>
     <div class="form-actions">
-      <%= f.button :submit %>
+      <%= f.button :submit, class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
