Attempted to apply JS: Update Navbar on Scroll. CHECK COMMENTS IN:  modified:   app/assets/stylesheets/components/_index.scss         modified:   app/assets/stylesheets/components/_navbar.scss         modified:   app/javascript/packs/application.js         modified:   app/views/pages/home.html.erb
rails
quit
.quit

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,14 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background-color: transparent;
+  transition: 0.5s background-color ease
 }
+
+// .navbar-lewagon-white {
+//   background-color: white;
+// }
+
+// ^^^ !For Update Navbar on Scroll. REF: https://kitt.lewagon.com/knowledge/lectures/05-Rails%2F04-Rails-mister-cocktail#sourceimport 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
@@ -10,3 +17,4 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
