--- a/app/views/users/index.js.erb
+++ b/app/views/users/index.js.erb
@@ -1,5 +1,5 @@
 function refreshCards(innerHTML) {
-  newCardsContainer = document.querySelector(".cards-container")
+  newCardsContainer = document.querySelector(".container-holder")
   newCardsContainer.innerHTML = innerHTML;
  }
 
