--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
     <h1>Details</h1>
-    <% if :therapist %>
+    <% if current_user.therapist %>
       <%= f.input :photo %>
       <%= f.input :photo_cache,
                   as: :hidden,
@@ -33,14 +33,14 @@
                 required: false %>
     <%= f.input :phone_number,
                 required: false %>
-    <% if :therapist %>
+    <% if current_user.therapist %>
       <%= f.input :languages,
                   required: true %>
     <% else %>
       <%= f.input :languages,
                   required: false %>
     <% end %>
-    <% if :therapist %>
+    <% if current_user.therapist %>
       <%= f.input :expertise,
                   required: true %>
     <% end %>
