added therapist boolean in sign up form

--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -11,7 +11,7 @@
   }
   .btn {
     width: 100%;
-    background-color: #489099;
+    background-color: #6ECAD6;
     text-decoration: none;
     margin-bottom: 20px;
     border: none;
