--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,7 @@
           <%= f.error_notification %>
 
           <div class="form-inputs">
+            <%= f.input :therapist, as: :radio_buttons %>
             <%= f.input :email,
                         required: true,
                         autofocus: true,
@@ -31,4 +32,3 @@
 
   </div>
 </div>
-
