--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
-<%= simple_form_for [@user,  @review] do |f| %>
+<%= simple_form_for [@booking, @review] do |f| %>
+<div class="form-inputs">
+    <%= f.input :rating, collection: 0..5 %>
+  </div>
   <div class="form-inputs">
 <%= f.input :description , as: :text , :input_html => {:minlength => 150 , maxlength: 300} %>
   </div>
