--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,1 +1,14 @@
 <h1 class = "title"> Show reviews </h1>
+<div class="container">
+  <% therapist = User.find(@review.booking.therapist_id) %>
+  <% user = @review.user %>
+  <h1>Review</h1>
+  <h2>Therapist: <%= therapist.first_name %> <%= therapist.last_name %></h2>
+  <% @review.rating.times do %>
+    <i class="fas fa-star stars"></i>
+  <% end %>
+  <p> <%= @review.description %> </p>
+  <p><%= @review.created_at.strftime("%Y-%m-%d") %></p>
+  <%# raise %>
+  <p>Review Made By Client: <%= user.first_name %> <%= user.last_name %></p>
+</div>
