--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -9,7 +9,7 @@
     margin-bottom: 20px;
     text-align: center;
   }
-  .btn {
+  .btn-primary {
     width: 100%;
     background-color: #6ECAD6;
     text-decoration: none;
