--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,6 +15,8 @@
     <p><%= therapist.first_name %></p>
     <h2><%= therapist.last_name %></h2>
     <p><%= therapist.address %></p>
+    <p>Amount: <%= humanized_money_with_symbol(therapist.price) %></p>
+
     <%= link_to "View", user_path(therapist), class: "btn btn-primary" %>
     <br>
   <% end %>
@@ -33,3 +35,4 @@
   });
 </script>
 <!-- End AJAX Search Form -->
+
