--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,12 @@
       <thead>
         <th>Expertise</th>
         <th>Language</th>
+        <th>Prices</th>
         </thead>
         <tr>
           <td> <%= @user.expertise%></td>
           <td> <%= @user.languages%></td>
+          <td><<p>Amount: <%= humanized_money_with_symbol(@user.price) %></p></td>
           </tr>
     </tbody>
   </table>
@@ -38,3 +40,4 @@
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
+
