--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,6 +44,10 @@
       <%= f.input :expertise,
                   required: true %>
     <% end %>
+    <% if current_user.therapist %>
+      <%= f.input :price,
+                  required: true %>
+    <% else %>
     <h1>Change your password</h1>
     <%= f.input :password,
                 hint: "Leave it blank if you don't want to change your password",
