--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -38,6 +38,7 @@
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
   }
   .col-1 {
+    margin: 0 4px;
     flex-basis: 20%;
   }
   .col-2 {
@@ -52,4 +53,5 @@
   .col-5 {
     flex-basis: 20%;
   }
+
 }
