CHECKPOINT styling edit prfoile form

--- a/app/assets/stylesheets/components/_profile_box.scss
+++ b/app/assets/stylesheets/components/_profile_box.scss
@@ -18,3 +18,16 @@
   background-color: #489099;
   border: none;
 }
+
+.inline-input {
+  display: flex;
+  justify-content: space-around;
+}
+
+.email {
+  width: 380px;
+}
+
+.current-password {
+  width: 380px;
+}
