fixing video subscription

--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -7,12 +7,14 @@
     </div>
         <div id="remote-video-container">
         <div id="video_overlays">
-          <video id="local-video" autoplay muted></video>
+          <video id="local-video" autoplay></video>
         </div>
           <video id="remote-video" autoplay></video>
       </div>
     </div>
     <hr />
+
+  </div>
 
     <button onclick="handleJoinSession()">
       Join Room
@@ -21,8 +23,6 @@
     <button onclick="handleLeaveSession()">
       Leave Room
     </button>
-
-  </div>
   <div class="right-box">
     <div class="container">
       <div class="row">
